<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".presentation.screen.record.RecordActivity">

    <androidx.camera.view.PreviewView
        android:id="@+id/previewView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.piontech.bugfilter.core.face.FaceOverlayView
        android:id="@+id/faceOverlay"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="@id/previewView"
        app:layout_constraintBottom_toBottomOf="@id/previewView"
        app:layout_constraintStart_toStartOf="@id/previewView"
        app:layout_constraintEnd_toEndOf="@id/previewView" />

    <!-- Trạng thái tracking (debug Stage 1) -->
    <TextView
        android:id="@+id/tvStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="#66000000"
        android:padding="8dp"
        android:textColor="@color/white"
        android:textSize="13sp"
        android:text="@string/status_initializing"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Nút quay video -->
    <ImageButton
        android:id="@+id/btnRecord"
        android:layout_width="76dp"
        android:layout_height="76dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/bg_record_button"
        android:contentDescription="@string/cd_record"
        android:scaleType="centerInside"
        android:src="@android:drawable/ic_media_play"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Đổi camera trước/sau -->
    <ImageButton
        android:id="@+id/btnFlip"
        android:layout_width="52dp"
        android:layout_height="52dp"
        android:layout_marginEnd="32dp"
        android:background="#55FFFFFF"
        android:contentDescription="@string/cd_flip_camera"
        android:src="@android:drawable/ic_menu_camera"
        app:layout_constraintTop_toTopOf="@id/btnRecord"
        app:layout_constraintBottom_toBottomOf="@id/btnRecord"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
